--- a/rolunk/index.html
+++ b/rolunk/index.html
@@ -57,7 +57,7 @@
           <div class="chip-row">
             <span class="chip">Egészségközpontú tenyésztés</span>
             <span class="chip">Prémium vonalak</span>
-            <span class="chip">Gazdi támogatás</span>
+            <span class="chip">A kutya CSALÁDTAG</span>
           </div>
         </section>
 
