--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
         </button>
 
         <ul class="nav-links">
-          <li><a href="kan-kutyaink/">Kan kutyáink</a></li>
-          <li><a href="szuka-kutyaink/">Szuka kutyáink</a></li>
-          <li><a href="sajat-tenyesztesu-kutyaink/">Saját tenyésztésű kutyáink</a></li>
-          <li><a href="elerheto-kolykok/">Elérhető kölykök</a></li>
-          <li><a href="elerhetoseg/" class="nav-cta">Elérhetőség</a></li>
-          <li><a href="rolunk/">Rólunk</a></li>
+          <li><a href="./kan-kutyaink/index.html">Kan kutyáink</a></li>
+          <li><a href="./szuka-kutyaink/index.html">Szuka kutyáink</a></li>
+          <li><a href="./sajat-tenyesztesu-kutyaink/index.html">Saját tenyésztésű kutyáink</a></li>
+          <li><a href="./elerheto-kolykok/index.html">Elérhető kölykök</a></li>
+          <li><a href="./elerhetoseg/index.html" class="nav-cta">Elérhetőség</a></li>
+          <li><a href="./rolunk/index.html">Rólunk</a></li>
         </ul>
       </div>
     </header>
@@ -53,7 +53,7 @@
             Fekete–arany, letisztult, komoly.
           </p>
           <div class="hero-cta-row">
-            <a href="elerheto-kolykok/" class="btn-primary">Elérhető kölykök</a>
+            <a href="./elerheto-kolykok/index.html" class="btn-primary">Elérhető kölykök</a>
             <div class="btn-soft">Töltsd fel a képeket és kész</div>
           </div>
         </section>
@@ -91,10 +91,14 @@
           <article class="dog-card">
             <span class="dog-tag">Kan</span>
             <div class="dog-card-main">
-              <div class="photo-frame"><div class="photo-frame-inner"></div></div>
+              <div class="photo-frame"><div class="photo-frame-inner-dog1">
+                <img src="" alt="">
+              </div>
+            </div>
             </div>
             <div class="dog-meta">
               <div>
+                
                 <div class="dog-name">Kan név</div>
                 <div class="dog-info">Szín · vérvonal · születési év</div>
               </div>
@@ -108,7 +112,10 @@
           <article class="dog-card">
             <span class="dog-tag">Szuka</span>
             <div class="dog-card-main">
-              <div class="photo-frame"><div class="photo-frame-inner"></div></div>
+              <div class="photo-frame"><div class="photo-frame-inner-dog2">
+              <img src="" alt="">
+              </div>
+            </div>
             </div>
             <div class="dog-meta">
               <div>
@@ -125,7 +132,10 @@
           <article class="dog-card">
             <span class="dog-tag">Kennel kölyök</span>
             <div class="dog-card-main">
-              <div class="photo-frame"><div class="photo-frame-inner"></div></div>
+              <div class="photo-frame"><div class="photo-frame-inner-dog3">
+                <img src="" alt="">
+              </div>
+            </div>
             </div>
             <div class="dog-meta">
               <div>
