--- a/szuka-kutyaink/index.html
+++ b/szuka-kutyaink/index.html
@@ -27,7 +27,7 @@
         </button>
 
         <ul class="nav-links">
-          <li><a href="../kan-kutyaink/">Kan kutyáink</a></li>
+          <li><a href="./">Kan kutyáink</a></li>
           <li><a href="../szuka-kutyaink/">Szuka kutyáink</a></li>
           <li><a href="../sajat-tenyesztesu-kutyaink/">Saját tenyésztésű kutyáink</a></li>
           <li><a href="../elerheto-kolykok/">Elérhető kölykök</a></li>
