--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus non, ea dolores alias explicabo porro, optio quisquam libero in ipsum officiis ullam at voluptates vero nisi tenetur dignissimos reiciendis deserunt.
           </p>
           <div class="hero-cta-row">
-<<<<<<< HEAD
+
             <a href="./elerheto-kolykok/index.html" class="btn-primary">Elérhető kölykök</a>
             <div class="btn-soft">Töltsd fel a képeket és kész</div>
-=======
+
             <a href="elerheto-kolykok/" class="btn-primary">Elérhető kölykök</a>
-            <div class="btn-soft"><---</div>
->>>>>>> d14f1ea24d87bf39a24c2e6597cb81f9649aabb2
+            <div class="btn-soft"></div>
+
           </div>
         </section>
 
