--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         </button>
 
         <ul class="nav-links">
-          <li><a href="./kan-kutyaink/index.html">Kan kutyáink</a></li>
-          <li><a href="./szuka-kutyaink/index.html">Szuka kutyáink</a></li>
-          <li><a href="./sajat-tenyesztesu-kutyaink/index.html">Saját tenyésztésű kutyáink</a></li>
-          <li><a href="./elerheto-kolykok/index.html">Elérhető kölykök</a></li>
-          <li><a href="./elerhetoseg/index.html" class="nav-cta">Elérhetőség</a></li>
+          <li><a href="kan-kutyaink/index.html">Kan kutyáink</a></li>
+          <li><a href="szuka-kutyaink/index.html">Szuka kutyáink</a></li>
+          <li><a href="sajat-tenyesztesu-kutyaink/">Saját tenyésztésű kutyáink</a></li>
+          <li><a href="elerheto-kolykok/index.html">Elérhető kölykök</a></li>
+          <li><a href="elerhetoseg/index.html" class="nav-cta">Elérhetőség</a></li>
           <li><a href="./rolunk/index.html">Rólunk</a></li>
         </ul>
       </div>
