--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Fedezd fel kanjainkat, szukáinkat és a legújabb kölykeinket, és találd meg
             <span class="dog-tag">Kan</span>
             <div class="dog-card-main">
               <div class="photo-frame"><div class="photo-frame-inner-dog1">
-                <img src="" alt="">
+                <img src="./img/kepfooldal.JPG" alt="">
               </div>
             </div>
             </div>
@@ -116,7 +116,7 @@ Fedezd fel kanjainkat, szukáinkat és a legújabb kölykeinket, és találd meg
             <span class="dog-tag">Szuka</span>
             <div class="dog-card-main">
               <div class="photo-frame"><div class="photo-frame-inner-dog2">
-              <img src="" alt="">
+              <img src="./img/kep2.jpeg" alt="">
               </div>
             </div>
             </div>
@@ -136,7 +136,7 @@ Fedezd fel kanjainkat, szukáinkat és a legújabb kölykeinket, és találd meg
             <span class="dog-tag">Kennel kölyök</span>
             <div class="dog-card-main">
               <div class="photo-frame"><div class="photo-frame-inner-dog3">
-                <img src="" alt="">
+                <img src="./img/_61A9527.JPEG" alt="">
               </div>
             </div>
             </div>
