--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Fedezd fel kanjainkat, szukáinkat és a legújabb kölykeinket, és találd meg
           <div class="hero-cta-row">
 
             <a href="./elerheto-kolykok/index.html" class="btn-primary">Elérhető kölykök</a>
-            <div class="btn-soft">Töltsd fel a képeket és kész</div>
+            
 
 
           </div>
@@ -64,7 +64,7 @@ Fedezd fel kanjainkat, szukáinkat és a legújabb kölykeinket, és találd meg
         <aside class="hero-gallery">
           <div class="hero-card-main">
             <div class="hero-photo-grid">
-              <div class="photo-frame"><div class="photo-frame-inner"><img src="./img/kep1.jpeg" alt=""></div></div>
+              <div class="photo-frame"><div class="photo-frame-inne"><img src="./img/kep1.jpeg" alt=""></div></div>
               <div class="photo-frame"><div class="photo-frame-inner"><img src="./img/kep2.jpeg" alt=""></div></div>
               <div class="photo-frame"><div class="photo-frame-inner"><img src="./img/kep3.jpg" alt=""></div></div>
               <div class="photo-frame"><div class="photo-frame-inner"><img src="./img/kep4.jpeg" alt=""></div></div>
