--- a/kan-kutyaink/index.html
+++ b/kan-kutyaink/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="UTF-8">
-    <title>Moonlight Kennel – Kan kutyáink</title>
+    <title>Berni's Diamonds kennel – Kan kutyáink</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Luxus fekete–arany kennel weboldal tele képhellyel.">
     <link rel="stylesheet" href="style.css">
