--- a/elerheto-kolykok/index.html
+++ b/elerheto-kolykok/index.html
@@ -43,9 +43,9 @@
         <header class="section-header">
           <div>
             <div class="section-kicker">Elérhető kölykök</div>
-            <h1 class="section-title">Aktuális almok – kölykök</h1>
+            <h1 class="section-title">Aktuális – kölykök</h1>
           </div>
-          <p class="section-description">Itt jelenhetnek meg az aktuálisan elérhető kölykök, alomra bontva.</p>
+          
         </header>
 
         <div class="puppies-grid">
