--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@ Fedezd fel kanjainkat, szukáinkat és a legújabb kölykeinket, és találd meg
           <div class="hero-card-main">
             <div class="hero-photo-grid">
               <div class="photo-frame"><div class="photo-frame-inne"><img src="./img/kep1.jpeg" alt=""></div></div>
-              <div class="photo-frame"><div class="photo-frame-inner"><img src="./img/kep2.jpeg" alt=""></div></div>
+              <div class="photo-frame"><div class="photo-frame-inner"><img src="./img/273E90DE-716E-44C2-838B-66AB7B09529C.jpeg" alt=""></div></div>
               <div class="photo-frame"><div class="photo-frame-inner"><img src="./img/kep3.jpg" alt=""></div></div>
-              <div class="photo-frame"><div class="photo-frame-inner"><img src="./img/kep4.jpeg" alt=""></div></div>
+              <div class="photo-frame"><div class="photo-frame-inner"><img src="./img/8ADC65CA-556B-43E4-BE6F-4378AFCBC1F0.jpeg" alt=""></div></div>
             </div>
             <div class="hero-stats">
               <div class="hero-stat-pill">⭐ Show / champion vonalak</div>
