--- a/kan-kutyaink/index.html
+++ b/kan-kutyaink/index.html
@@ -51,22 +51,22 @@
         <div class="dog-grid">
           <article class="dog-card">
             <span class="dog-tag">Kan</span>
-            <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"></div></div></div>
-            <div class="dog-meta"><div><div class="dog-name">Kan #1 név</div><div class="dog-info">Szín · vérvonal · születési év</div></div></div>
+            <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"><img src="../img/kep2.jpeg" alt=""></div></div></div>
+            <div class="dog-meta"><div><div class="dog-name">Labanc Völgyi Bailey</div><div class="dog-info">Biewer ·  100% Biewer DNS tesztelt · 2019.01.01</div></div></div>
             <div class="dog-badges"><span class="badge">Champion vonal</span><span class="badge badge-soft">Egészségügyi szűrések</span></div>
           </article>
 
           <article class="dog-card">
             <span class="dog-tag">Kan</span>
-            <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"></div></div></div>
-            <div class="dog-meta"><div><div class="dog-name">Kan #2 név</div><div class="dog-info">Szín · vérvonal · születési év</div></div></div>
+            <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"> <img src="" alt=""></div></div></div>
+            <div class="dog-meta"><div><div class="dog-name">Labanc Völgyi Boby</div><div class="dog-info">Biewer · Csoki hordozó · 2018.06.04</div></div></div>
             <div class="dog-badges"><span class="badge">Show eredmények</span><span class="badge badge-soft">Kiegyensúlyozott temperamentum</span></div>
           </article>
 
           <article class="dog-card">
             <span class="dog-tag">Kan</span>
-            <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"></div></div></div>
-            <div class="dog-meta"><div><div class="dog-name">Kan #3 név</div><div class="dog-info">Szín · vérvonal · születési év</div></div></div>
+            <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"><img src="" alt=""></div></div></div>
+            <div class="dog-meta"><div><div class="dog-name">Alex Brian By Berni's Diamonds</div><div class="dog-info">Biewer· Goldust Csoki hordozó DNS Tesztelt · 2023.12.26</div></div></div>
             <div class="dog-badges"><span class="badge">Sport / munka</span><span class="badge badge-soft">Családi életre nevelt</span></div>
           </article>
         </div>
