--- a/sajat-tenyesztesu-kutyaink/index.html
+++ b/sajat-tenyesztesu-kutyaink/index.html
@@ -52,22 +52,22 @@
           <article class="dog-card">
             <span class="dog-tag">Moonlight</span>
             <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"></div></div></div>
-            <div class="dog-meta"><div><div class="dog-name">Moonlight [Név #1]</div><div class="dog-info">Alomjelölés · születési dátum</div></div></div>
-            <div class="dog-badges"><span class="badge">Itthon maradt</span><span class="badge badge-soft">Szülők: Kan · Szuka</span></div>
+            <div class="dog-meta"><div><div class="dog-name">Ariella By Berni's Diamonds</div><div class="dog-info">A-alom · 2023.12.26</div></div></div>
+            <div class="dog-badges"><span class="badge">Itthon maradt</span><span class="badge badge-soft">Szülők: Bella És Bailey</span></div>
           </article>
 
           <article class="dog-card">
             <span class="dog-tag">Moonlight</span>
             <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"></div></div></div>
-            <div class="dog-meta"><div><div class="dog-name">Moonlight [Név #2]</div><div class="dog-info">Alomjelölés · születési dátum</div></div></div>
-            <div class="dog-badges"><span class="badge">Új otthonban</span><span class="badge badge-soft">Family pet / sport</span></div>
+            <div class="dog-meta"><div><div class="dog-name">Alex Brian By Berni's Diamonds</div><div class="dog-info">A-alom · 2023.12.26</div></div></div>
+            <div class="dog-badges"><span class="badge">Új otthonban</span><span class="badge badge-soft">Szülők: Bella És Bailey</span></div>
           </article>
 
           <article class="dog-card">
             <span class="dog-tag">Moonlight</span>
             <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"></div></div></div>
-            <div class="dog-meta"><div><div class="dog-name">Moonlight [Név #3]</div><div class="dog-info">Alomjelölés · születési dátum</div></div></div>
-            <div class="dog-badges"><span class="badge">Champion potenciál</span><span class="badge badge-soft">Egészség szűrések</span></div>
+            <div class="dog-meta"><div><div class="dog-name">Brandon Bayern By Berni's Diamonds</div><div class="dog-info">B-alom· 2025.04.18</div></div></div>
+            <div class="dog-badges"><span class="badge">Champion potenciál</span><span class="badge badge-soft">Szülők: Bella És Boby</span></div>
           </article>
         </div>
       </div>
