--- a/szuka-kutyaink/index.html
+++ b/szuka-kutyaink/index.html
@@ -27,7 +27,7 @@
         </button>
 
         <ul class="nav-links">
-          <li><a href="./">Kan kutyáink</a></li>
+          <li><a href="../kan-kutyaink/index.html">Kan kutyáink</a></li>
           <li><a href="../szuka-kutyaink/">Szuka kutyáink</a></li>
           <li><a href="../sajat-tenyesztesu-kutyaink/">Saját tenyésztésű kutyáink</a></li>
           <li><a href="../elerheto-kolykok/">Elérhető kölykök</a></li>
@@ -51,8 +51,8 @@
         <div class="dog-grid">
           <article class="dog-card">
             <span class="dog-tag">Szuka</span>
-            <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"></div></div></div>
-            <div class="dog-meta"><div><div class="dog-name">Szuka #1 név</div><div class="dog-info">Szín · vérvonal · születési év</div></div></div>
+            <div class="dog-card-main"><div class="photo-frame"><div class="photo-frame-inner"><img src="../img/IMG_5191.jpeg" alt=""></div></div></div>
+            <div class="dog-meta"><div><div class="dog-name">Gvendolin Picur Kicsi Kincsei ,Bella</div><div class="dog-info">Goldust · vérvonal · 2020.08.19</div></div></div>
             <div class="dog-badges"><span class="badge">Alap tenyészszuka</span><span class="badge badge-soft">Tesztelt egészség</span></div>
           </article>
 
